⛓️‍💥 Remove remaining blockchain references from API and database
